--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sabriaz-frontend</title>
   </head>
